# f2fs_unpacker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
include/: f2fs_fs.h
src/: f2fs_compress.cpp  f2fs_compress.h  f2fs_extract.cpp  f2fs_extract.h  f2fs_metadata.cpp  f2fs_metadata.h  main.cpp  win_pread.cpp  win_pread.h
test/: test_compress.cpp
